ecmascript/parser/tests/typescript-errors/tsc/async/es6/asyncArrowFunction/asyncArrowFunction8_es6/input.ts.stderr
error: Unexpected token `]`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/typescript-errors/tsc/async/es6/asyncArrowFunction/asyncArrowFunction8_es6/input.ts:5:19
  |
5 |   var v = { [await]: foo }
  |                   ^

